@@ -1,7 +1,13 @@
+2023-05-24 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/stm8/gen.c,
+	  support/regression/tests/bigstack.c.in:
+	  Improve guards against a potential issue in the interaction of function entry stack adjustment and register parameters.
+
 2023-05-23 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/stm8/gen.c:
-	  Fix a segdfault in a corner case in stm8 codegen.
+	  Fix a segfault in a corner case in stm8 codegen.
 	* device/lib/strtoul.c:
 	  Improve strtoul range error check.
 	* support/regression/tests/mulextra.c:
